# infon

./: .dockerignore  .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.yml  justfile  prometheus.yml
.claude/: settings.local.json
.claude/skills/deal-with-vite/: SKILL.md
backend/: Cargo.toml  Dockerfile.dev
backend/src/: auth.rs  config.rs  elo.rs  lib.rs  llms_txt.rs  main.rs  metrics.rs  queue.rs  rate_limit.rs  replay.rs  tournament.rs  worker_pool.rs
backend/src/api/: mod.rs  ws.rs
backend/src/db/: mod.rs
backend/src/engine/: config.rs  creature.rs  game.rs  lua_api.rs  mod.rs  player.rs  server.rs  spatial.rs  world.rs
backend/tests/: headless_queue.rs  original_bots.rs
data/maps/: castle.json  cn.json  foo.json  gpn.json  owl.json  pacman.json  stripeslice.json  water.json
docs/: game-overview.md  implementation-plan.md  lua-api-reference.md  original-architecture.md  v2-roadmap.md
frontend/: Dockerfile.dev  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: auth-flow.spec.ts  bot-workflow.spec.ts  game-viewer.spec.ts  leaderboard.spec.ts  navigation.spec.ts  pages-render.spec.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FeedbackButton.tsx  GameCanvas.tsx  NotificationBell.tsx  ProtectedRoute.tsx  ReplayCanvas.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: About.tsx  ApiKeys.tsx  BotEditor.tsx  Home.tsx  (+13 more)
grafana/dashboards/: api-infrastructure.json  game-engine.json
orig_game/: .gitignore  Makefile  README.txt
(+10 files in other folders)
